# Task-Manager-Application

./: CMakeLists.txt  Makefile  README.md  Taskmgr  main  main.cpp  task_dependency.cpp
Database/: users.db
sha256/: CMakeLists.txt
